[build-system]
requires = ["setuptools >= 42", "setuptools_scm[toml] >= 3.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dilib"
dynamic = ["version"]
description = "Dependency injection (DI) library for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = [
    "dependency injection",
    "di",
    "inversion of control",
    "ioc",
    "design patterns",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = ["typing_extensions>=4.4.0"]

# See https://github.com/astral-sh/uv/issues/4762#issuecomment-2207423858
# regarding `all` trick
[project.optional-dependencies]
build = ["build>=1.0.3", "twine>=4.0.2"]
docs = [
    "myst-parser>=3.0.0",
    "pydata-sphinx-theme>=0.14.0",
    "sphinx>=7.0.0",
    "sphinx-copybutton>=0.5.2",
]
setup = ["nox>=2024.10.9", "uv>=0.4.20"]
test = [
    # Tools
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-xdist>=3.5.0",
    # TODO: Remove max version when this is released: https://github.com/microsoft/pyright/pull/10494
    "pyright>=1.1.344,<1.1.401",
    "ruff>=0.1.8",
]
all = ["dilib[build]", "dilib[docs]", "dilib[setup]", "dilib[test]"]

[project.urls]
"Homepage" = "https://github.com/ansatzcapital/dilib"
"Documentation" = "https://ansatzcapital.github.io/dilib"
"Packaging" = "https://pypi.org/project/dilib"
"Source" = "https://github.com/ansatzcapital/dilib"
"Tracker" = "https://github.com/ansatzcapital/dilib/issues"

[tool.setuptools.packages.find]
# where = ["python/"]

[tool.setuptools.package-data]
"dilib" = ["py.typed"]

[tool.setuptools_scm]
write_to = "dilib/version.py"

# Using default version scheme

[tool.mypy]
# Adapted from https://careers.wolt.com/en/blog/tech/professional-grade-mypy-configuration
# and https://justincaustin.com/blog/mypy-tips-and-tricks/
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_incomplete_defs = true
# Many third-party libraries are not properly typed
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
follow_imports = "normal"
ignore_missing_imports = true
# Many third-party libraries don't explicitly export public API
# no_implicit_reexport = true
# Aesthetic preference
# show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true

# See https://mypy-lang.blogspot.com/2023/08/mypy-15-released.html
enable_error_code = ["explicit-override"]

disable_error_code = [
    # See https://github.com/python/mypy/issues/4717
    "type-abstract",
]

exclude = "build|docs/build"

[tool.pyright]
include = ["**/*.py"]
exclude = ["**/__pycache__", "**/.*"]
# To enable strict mode:
# strict = ["**/*.py"]
# Many third-party libraries don't explicitly export public API
reportPrivateImportUsage = "none"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations 10 -s"
filterwarnings = []
markers = ["slow"]

[tool.ruff]
target-version = "py38"
line-length = 79

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "version.py",
]

[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "F",
    # https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "E",
    "W",
    # https://beta.ruff.rs/docs/rules/#mccabe-c90
    "C90",
    # https://beta.ruff.rs/docs/rules/#isort-i
    "I",
    # https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "N",
    # https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "D",
    # https://beta.ruff.rs/docs/rules/#pyupgrade-up
    "UP",
    # https://beta.ruff.rs/docs/rules/#flake8-annotations-ann
    "ANN",
    # https://beta.ruff.rs/docs/rules/#flake8-blind-except-ble
    "BLE",
    # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "B",
    # https://beta.ruff.rs/docs/rules/#flake8-builtins-a
    "A",
]

ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D417",
    "ANN401",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
