[metadata]
name = dilib

[options]
packages = find:
python_requires = >=3.7
install_requires =
setup_requires =
    setuptools_scm[toml] >= 4

[options.extras_require]
testing =
    black >= 22.8
    docformatter >= 1.5.0
    flake8 >= 5.0.4
    isort >= 5.2.2
    mypy >= 0.800
    pytest >= 6.2.5
    pytest-cov >=2, <3
#     pyright >= 0.0.13
    tox >= 3.27.1

[flake8]
ignore = E203,E501,W503
max-complexity = 10

[tox:tox]
minversion = 3.7
envlist =
    black
    docformatter
    flake8
    isort
    mypy
#     pyright
    py37,py38,py39,py310,py311,py312-dev
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38, black, docformatter, flake8, isort, mypy  #, pyright
    3.9: py39
    3.10: py310
    3.11: py311
    3.12-dev: py312-dev

[testenv]
setenv = 
    PYRIGHT_PYTHON_FORCE_VERSION = 1.1.231
extras = testing
commands = pytest {posargs}

[testenv:black]
extras = testing
commands = black --check dilib

[testenv:docformatter]
extras = testing
commands = docformatter -cr dilib

[testenv:flake8]
extras = testing
commands = flake8 dilib

[testenv:isort]
extras = testing
commands = isort -c dilib

[testenv:mypy]
extras = testing
commands = mypy dilib --check-untyped-defs

[testenv:pyright]
extras = testing
commands = pyright dilib
