[metadata]
name = dilib
summary = Dependency injection library
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
requires_python = >=3.7
keywords =
    dependency injection, di, inversion of control, ioc, design patterns
url = https://github.com/ansatzcapital/dilib
project_urls =
    Packaging=https://pypi.org/project/dilib/
    Source=https://github.com/ansatzcapital/dilib
    Tracker=https://github.com/ansatzcapital/dilib/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
setup_requires =
    setuptools_scm[toml] >= 4

[options.extras_require]
testing =
    black >= 22.8
    docformatter >= 1.5.0
    flake8 >= 5.0.4
    isort >= 5.2.2
    mypy >= 0.800
    pytest >= 6.2.5
    pytest-cov >=2, <3
    pyright >= 0.0.13
    tox >= 3.27.1

[flake8]
ignore = E203,E501,W503
max-complexity = 10

[tox:tox]
minversion = 3.7
envlist =
    black
    docformatter
    flake8
    isort
    mypy
    pyright
    py37,py38,py39,py310,py311,pypy3
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38, black, docformatter, flake8, isort, mypy, pyright
    3.9: py39
    3.10: py310
    3.11: py311
    pypy-3: pypy3

[testenv]
extras = testing
commands = pytest {posargs}

[testenv:black]
extras = testing
commands = black --check dilib

[testenv:docformatter]
extras = testing
commands = docformatter -cr dilib

[testenv:flake8]
extras = testing
commands = flake8 dilib

[testenv:isort]
extras = testing
commands = isort -c dilib

[testenv:mypy]
extras = testing
commands = mypy dilib

[testenv:pyright]
setenv =
    PYRIGHT_PYTHON_FORCE_VERSION = 1.1.231
extras = testing
commands = pyright dilib
