[metadata]
name = dilib
summary = Dependency injection library
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
requires_python = >=3.8
keywords =
    dependency injection, di, inversion of control, ioc, design patterns
url = https://github.com/ansatzcapital/dilib
project_urls =
    Packaging=https://pypi.org/project/dilib/
    Source=https://github.com/ansatzcapital/dilib
    Tracker=https://github.com/ansatzcapital/dilib/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typing_extensions >= 4.4.0
setup_requires =
    setuptools_scm[toml] >= 3.4

[options.extras_require]
docs =
    myst-parser >= 4.0.0
    sphinx >= 8.1.3
setup =
    build >= 0.6.0
    setuptools_scm[toml] >= 3.4
    wheel >= 0.38.0
test =
    mypy >= 1.7.1
    nox >= 2023.4.22
    pytest >= 6.2.5
    pytest-cov >=2, <3
    pyright >= 1.1.284
    ruff >= 0.3.0

[options.package_data]
dilib = py.typed
